[gd_scene load_steps=2 format=3 uid="uid://cg7axtoqfulsl"]

[ext_resource type="Script" uid="uid://cu5u2pyt62jfd" path="res://scripts/hud.gd" id="1_vwgbt"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_vwgbt")

[node name="TopPanelBorder" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 576.0
offset_bottom = 72.0
grow_horizontal = 2
color = Color(0, 0, 0, 1)

[node name="TopPanel" type="ColorRect" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -576.0
offset_right = 576.0
offset_bottom = 70.0
grow_horizontal = 2
color = Color(0.580392, 0.337255, 0.560784, 1)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 50.0
offset_right = 250.0
offset_bottom = 70.0
theme_override_font_sizes/font_size = 40
text = "Puntaje: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.5
offset_top = -31.5
offset_right = 112.5
offset_bottom = 31.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Iniciar"

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -452.0
offset_right = -252.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "Vida: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="VIDITA" type="Label" parent="HealthLabel"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -653.0
offset_top = 393.0
offset_right = 5.0
offset_bottom = 506.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 40
text = "Atrapa tantas frutas como puedas
 moviendote con el mouse"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
self_modulate = Color(1, 0, 0, 1)
offset_left = 900.0
offset_top = 15.0
offset_right = 1100.0
offset_bottom = 55.0
value = 100.0
show_percentage = false

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
